import "common/language.proto";
import "common/referenceduri.proto";

package apsara.odps.lot;

option java_outer_classname = "LanguageTransformProtos";

message LanguageTransform
{
    required string ClassName = 1;
    repeated ReferencedURI URIs= 2;
    required Language Language = 3;
}
